# AI-Job-Hunter

./: .gitignore  README.md  app.py  hello.py  interview_materials.md  pyproject.toml  tailored_resume.md
ai/: README.md  pyproject.toml
ai/src/ai/: crew.py  main.py  utils.py
ai/src/ai/config/: agents.yaml  tasks.yaml
ai/src/ai/tools/: pdf_content_reader.py
src/aijobhunter/: crew.py  main.py
