[project]
name = "aijobhunter"
version = "0.1.0"
description = "AIJobHunter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools==0.32.1",
    "crewai[tools]==0.98.0",
    "dotenv>=0.9.9",
    "langchain-groq>=0.2.5",
    "langchain-huggingface>=0.1.2",
    "pymupdf>=1.25.3",
]

[project.scripts]
aijobhunter = "aijobhunter.main:run"
run_crew = "aijobhunter.main:run"
train = "aijobhunter.main:train"
replay = "aijobhunter.main:replay"
test = "aijobhunter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
