[project]
name = "ai"
version = "0.1.0"
description = "ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.36.0",
    "crewai[tools]>=0.102.0,<1.0.0",
    "dotenv>=0.9.9",
    "langchain-groq>=0.2.5",
    "langchain-huggingface>=0.1.2",
]

[project.scripts]
ai = "ai.main:run"
run_crew = "ai.main:run"
train = "ai.main:train"
replay = "ai.main:replay"
test = "ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
